[gd_scene load_steps=17 format=3 uid="uid://crmhr01w6rifg"]

[ext_resource type="Script" uid="uid://bpkoa2linxyxe" path="res://player_bot.gd" id="1_j44ee"]
[ext_resource type="Texture2D" uid="uid://bb3wtji4yt0gw" path="res://tread_atlas_texture.tres" id="2_tdgst"]
[ext_resource type="Texture2D" uid="uid://bsaraudskt3f8" path="res://assets/kenney/body_3Dyellow.png" id="3_sle0f"]
[ext_resource type="AudioStream" uid="uid://bgrycvssi26r1" path="res://assets/audio/bfxr/Shoot35.wav" id="4_n4koy"]
[ext_resource type="Texture2D" uid="uid://cqg07ok00rqxm" path="res://assets/gun1.png" id="4_sle0f"]
[ext_resource type="PackedScene" uid="uid://ur3a506lypfy" path="res://stats_ui.tscn" id="6_8ykbp"]
[ext_resource type="PackedScene" uid="uid://coxje4ng773t5" path="res://progress_ui.tscn" id="9_7kp10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sle0f"]
size = Vector2(154, 186)

[sub_resource type="Animation" id="Animation_dtoc6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_8ykbp"]
resource_name = "tread_backward"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_j44ee"]
resource_name = "tread_forward"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n4koy"]
_data = {
&"RESET": SubResource("Animation_dtoc6"),
&"tread_backward": SubResource("Animation_8ykbp"),
&"tread_forward": SubResource("Animation_j44ee")
}

[sub_resource type="Animation" id="Animation_rfd3m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_7kp10"]
resource_name = "tread_backward"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_tdgst"]
resource_name = "tread_forward"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwqq3"]
_data = {
&"RESET": SubResource("Animation_rfd3m"),
&"tread_backward": SubResource("Animation_7kp10"),
&"tread_forward": SubResource("Animation_tdgst")
}

[node name="PlayerBot" type="CharacterBody2D" groups=["Player"]]
collision_mask = 7
script = ExtResource("1_j44ee")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_sle0f")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="LeftTread" type="Sprite2D" parent="."]
position = Vector2(0, -66)
texture = ExtResource("2_tdgst")
vframes = 7
frame = 5

[node name="LeftTreadAnimationPlayer" type="AnimationPlayer" parent="LeftTread"]
libraries = {
&"": SubResource("AnimationLibrary_n4koy")
}
speed_scale = 2.0

[node name="RightTread" type="Sprite2D" parent="."]
position = Vector2(0, 66)
texture = ExtResource("2_tdgst")
vframes = 7
frame = 5

[node name="RightTreadAnimationPlayer" type="AnimationPlayer" parent="RightTread"]
libraries = {
&"": SubResource("AnimationLibrary_vwqq3")
}
speed_scale = 2.0

[node name="LeftGun" type="Node2D" parent="."]
position = Vector2(0, 60)

[node name="LeftGunSprite" type="Sprite2D" parent="LeftGun"]
position = Vector2(0, 15)
rotation = 3.14159
texture = ExtResource("4_sle0f")

[node name="BulletAudio" type="AudioStreamPlayer2D" parent="LeftGun"]
position = Vector2(0, -60)
stream = ExtResource("4_n4koy")

[node name="RightGun" type="Node2D" parent="."]
position = Vector2(0, -60)

[node name="RightGunSprite" type="Sprite2D" parent="RightGun"]
position = Vector2(0, -15)
texture = ExtResource("4_sle0f")

[node name="LaserAudio" type="AudioStreamPlayer2D" parent="RightGun"]
position = Vector2(0, 60)
stream = ExtResource("4_n4koy")

[node name="Body" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("3_sle0f")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StatsUI" parent="CanvasLayer" instance=ExtResource("6_8ykbp")]

[node name="ProgressUI" parent="CanvasLayer" instance=ExtResource("9_7kp10")]

[node name="Label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 60.0
offset_right = -15.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
scale = Vector2(2, 2)
size_flags_horizontal = 6
size_flags_vertical = 6
horizontal_alignment = 1
vertical_alignment = 1
